[package]
name = "diesel-explosion"
version = "0.1.0"
authors = ["Nathan Merritt <gnm@the-merritts.net>"]

[dependencies]
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "1.3.2", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.2"
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
rocket_contrib = { version = "0.4.0-rc.1", features = ["handlebars_templates", "diesel_postgres_pool"] }
